Added notebooks for inserting data into Hopsworks feature store

--- a/notebooks/04_transform_raw_data_into_features_and_targets.ipynb
+++ b/notebooks/04_transform_raw_data_into_features_and_targets.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,26 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 2024-01 was already in local storage\n",
-      "File 2024-02 was already in local storage\n",
-      "File 2024-03 was already in local storage\n",
-      "File 2024-04 was already in local storage\n",
-      "File 2024-05 was already in local storage\n",
-      "File 2024-06 was already in local storage\n",
-      "File 2024-07 was already in local storage\n",
-      "File 2024-08 was already in local storage\n",
-      "File 2024-09 was already in local storage\n",
-      "File 2024-10 was already in local storage\n",
-      "File 2024-11 was already in local storage\n",
-      "Downloading file 2024-12\n",
-      "2024-12 file is not available\n"
+      "File 2022-01 was already in local storage\n",
+      "Downloading file 2022-02\n",
+      "Downloading file 2022-03\n",
+      "Downloading file 2022-04\n",
+      "Downloading file 2022-05\n",
+      "Downloading file 2022-06\n",
+      "Downloading file 2022-07\n",
+      "Downloading file 2022-08\n",
+      "Downloading file 2022-09\n",
+      "Downloading file 2022-10\n",
+      "Downloading file 2022-11\n",
+      "Downloading file 2022-12\n"
      ]
     },
     {
@@ -97,28 +96,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024-01-01 00:57:55</td>\n",
-       "      <td>186</td>\n",
+       "      <td>2022-01-01 00:35:40</td>\n",
+       "      <td>142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024-01-01 00:03:00</td>\n",
-       "      <td>140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-01-01 00:17:06</td>\n",
+       "      <td>2022-01-01 00:33:43</td>\n",
        "      <td>236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-01 00:53:21</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024-01-01 00:36:38</td>\n",
-       "      <td>79</td>\n",
+       "      <td>2022-01-01 00:25:21</td>\n",
+       "      <td>114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024-01-01 00:46:51</td>\n",
-       "      <td>211</td>\n",
+       "      <td>2022-01-01 00:36:48</td>\n",
+       "      <td>68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -126,53 +125,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646364</th>\n",
-       "      <td>2024-11-30 23:11:15</td>\n",
-       "      <td>162</td>\n",
+       "      <th>3399544</th>\n",
+       "      <td>2022-12-31 23:46:00</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646365</th>\n",
-       "      <td>2024-11-30 23:49:30</td>\n",
-       "      <td>132</td>\n",
+       "      <th>3399545</th>\n",
+       "      <td>2022-12-31 23:13:24</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646366</th>\n",
-       "      <td>2024-11-30 23:31:46</td>\n",
-       "      <td>100</td>\n",
+       "      <th>3399546</th>\n",
+       "      <td>2022-12-31 23:00:49</td>\n",
+       "      <td>168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646367</th>\n",
-       "      <td>2024-11-30 23:41:21</td>\n",
-       "      <td>42</td>\n",
+       "      <th>3399547</th>\n",
+       "      <td>2022-12-31 23:02:50</td>\n",
+       "      <td>238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3646368</th>\n",
-       "      <td>2024-11-30 23:21:52</td>\n",
-       "      <td>116</td>\n",
+       "      <th>3399548</th>\n",
+       "      <td>2022-12-31 23:00:15</td>\n",
+       "      <td>85</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>37500963 rows × 2 columns</p>\n",
+       "<p>39654634 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "            pickup_datetime  pickup_location_id\n",
-       "0       2024-01-01 00:57:55                 186\n",
-       "1       2024-01-01 00:03:00                 140\n",
-       "2       2024-01-01 00:17:06                 236\n",
-       "3       2024-01-01 00:36:38                  79\n",
-       "4       2024-01-01 00:46:51                 211\n",
+       "0       2022-01-01 00:35:40                 142\n",
+       "1       2022-01-01 00:33:43                 236\n",
+       "2       2022-01-01 00:53:21                 166\n",
+       "3       2022-01-01 00:25:21                 114\n",
+       "4       2022-01-01 00:36:48                  68\n",
        "...                     ...                 ...\n",
-       "3646364 2024-11-30 23:11:15                 162\n",
-       "3646365 2024-11-30 23:49:30                 132\n",
-       "3646366 2024-11-30 23:31:46                 100\n",
-       "3646367 2024-11-30 23:41:21                  42\n",
-       "3646368 2024-11-30 23:21:52                 116\n",
+       "3399544 2022-12-31 23:46:00                  16\n",
+       "3399545 2022-12-31 23:13:24                  75\n",
+       "3399546 2022-12-31 23:00:49                 168\n",
+       "3399547 2022-12-31 23:02:50                 238\n",
+       "3399548 2022-12-31 23:00:15                  85\n",
        "\n",
-       "[37500963 rows x 2 columns]"
+       "[39654634 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,20 +179,20 @@
    "source": [
     "from src.data import load_raw_data\n",
     "\n",
-    "rides = load_raw_data(year=2024)\n",
+    "rides = load_raw_data(year=2022)\n",
     "rides"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 263/263 [00:02<00:00, 106.43it/s]\n"
+      "100%|██████████| 262/262 [00:03<00:00, 80.72it/s] \n"
      ]
     },
     {
@@ -225,32 +224,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024-01-01 00:00:00</td>\n",
-       "      <td>25</td>\n",
+       "      <td>2022-01-01 00:00:00</td>\n",
+       "      <td>11</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024-01-01 01:00:00</td>\n",
-       "      <td>29</td>\n",
+       "      <td>2022-01-01 01:00:00</td>\n",
+       "      <td>15</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024-01-01 02:00:00</td>\n",
-       "      <td>34</td>\n",
+       "      <td>2022-01-01 02:00:00</td>\n",
+       "      <td>26</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024-01-01 03:00:00</td>\n",
-       "      <td>31</td>\n",
+       "      <td>2022-01-01 03:00:00</td>\n",
+       "      <td>8</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024-01-01 04:00:00</td>\n",
-       "      <td>32</td>\n",
+       "      <td>2022-01-01 04:00:00</td>\n",
+       "      <td>9</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -260,58 +259,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2114515</th>\n",
-       "      <td>2024-11-30 19:00:00</td>\n",
+       "      <th>2295115</th>\n",
+       "      <td>2022-12-31 19:00:00</td>\n",
        "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <td>199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2114516</th>\n",
-       "      <td>2024-11-30 20:00:00</td>\n",
+       "      <th>2295116</th>\n",
+       "      <td>2022-12-31 20:00:00</td>\n",
        "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <td>199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2114517</th>\n",
-       "      <td>2024-11-30 21:00:00</td>\n",
+       "      <th>2295117</th>\n",
+       "      <td>2022-12-31 21:00:00</td>\n",
        "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <td>199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2114518</th>\n",
-       "      <td>2024-11-30 22:00:00</td>\n",
+       "      <th>2295118</th>\n",
+       "      <td>2022-12-31 22:00:00</td>\n",
        "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <td>199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2114519</th>\n",
-       "      <td>2024-11-30 23:00:00</td>\n",
+       "      <th>2295119</th>\n",
+       "      <td>2022-12-31 23:00:00</td>\n",
        "      <td>0</td>\n",
-       "      <td>110</td>\n",
+       "      <td>199</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2114520 rows × 3 columns</p>\n",
+       "<p>2295120 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                pickup_hour  rides  pickup_location_id\n",
-       "0       2024-01-01 00:00:00     25                   4\n",
-       "1       2024-01-01 01:00:00     29                   4\n",
-       "2       2024-01-01 02:00:00     34                   4\n",
-       "3       2024-01-01 03:00:00     31                   4\n",
-       "4       2024-01-01 04:00:00     32                   4\n",
+       "0       2022-01-01 00:00:00     11                   4\n",
+       "1       2022-01-01 01:00:00     15                   4\n",
+       "2       2022-01-01 02:00:00     26                   4\n",
+       "3       2022-01-01 03:00:00      8                   4\n",
+       "4       2022-01-01 04:00:00      9                   4\n",
        "...                     ...    ...                 ...\n",
-       "2114515 2024-11-30 19:00:00      0                 110\n",
-       "2114516 2024-11-30 20:00:00      0                 110\n",
-       "2114517 2024-11-30 21:00:00      0                 110\n",
-       "2114518 2024-11-30 22:00:00      0                 110\n",
-       "2114519 2024-11-30 23:00:00      0                 110\n",
+       "2295115 2022-12-31 19:00:00      0                 199\n",
+       "2295116 2022-12-31 20:00:00      0                 199\n",
+       "2295117 2022-12-31 21:00:00      0                 199\n",
+       "2295118 2022-12-31 22:00:00      0                 199\n",
+       "2295119 2022-12-31 23:00:00      0                 199\n",
        "\n",
-       "[2114520 rows x 3 columns]"
+       "[2295120 rows x 3 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,14 +324,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 263/263 [00:12<00:00, 20.98it/s]\n"
+      "100%|██████████| 262/262 [00:17<00:00, 14.69it/s]\n"
      ]
     }
    ],
@@ -348,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "features.shape=(80741, 674)\n"
+      "features.shape=(88294, 674)\n"
      ]
     }
    ],
@@ -365,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "targets.shape=(80741,)\n"
+      "targets.shape=(88294,)\n"
      ]
     }
    ],
@@ -382,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,11 +391,6 @@
     "from src.paths import TRANSFORMED_DATA_DIR\n",
     "final_data.to_parquet(TRANSFORMED_DATA_DIR/ 'final_data.parquet')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
