fix feature pipeline yaml

--- a/notebooks/12_feature_pipeline.ipynb
+++ b/notebooks/12_feature_pipeline.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date=Timestamp('2025-02-03 18:00:00')\n"
+      "current_date=Timestamp('2025-02-04 20:00:00')\n"
      ]
     }
    ],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,15 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fetch_data_to=Timestamp('2025-02-03 18:00:00')\n",
-      "fetch_data_from=Timestamp('2025-01-06 18:00:00')\n"
+      "fetch_data_to=Timestamp('2025-02-04 20:00:00')\n",
+      "fetch_data_from=Timestamp('2025-01-07 20:00:00')\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 258/258 [00:00<00:00, 913.61it/s]\n"
+      "100%|██████████| 257/257 [00:00<00:00, 763.30it/s]\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,18 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-02-03 13:38:36,437 INFO: Closing external client and cleaning up certificates.\n",
-      "Connection closed.\n",
-      "2025-02-03 13:38:36,442 INFO: Initializing external client\n",
-      "2025-02-03 13:38:36,443 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-02-03 13:38:37,587 INFO: Python Engine initialized.\n",
+      "2025-02-04 15:49:22,472 INFO: Initializing external client\n",
+      "2025-02-04 15:49:22,472 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-02-04 15:49:24,386 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n"
      ]
@@ -215,16 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_store.FeatureStore at 0x16ff12750>"
+       "<hsfs.feature_store.FeatureStore at 0x31f9eed80>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_group.FeatureGroup at 0x16a11ef60>"
+       "<hsfs.feature_group.FeatureGroup at 0x1204be3f0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +274,7 @@
        "'bigint'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,14 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 173376/173376 | Elapsed Time: 00:07 | Remaining Time: 00:00\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 172704/172704 | Elapsed Time: 01:24 | Remaining Time: 00:00\n"
      ]
     },
     {
@@ -313,7 +311,7 @@
        " None)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,6 +319,11 @@
    "source": [
     "feature_group.insert(ts_data, write_options={\"wait_for_job\": False})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
