fix feature pipeline

--- a/notebooks/12_feature_pipeline.ipynb
+++ b/notebooks/12_feature_pipeline.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date=Timestamp('2025-02-04 20:00:00')\n"
+      "current_date=Timestamp('2025-03-28 00:00:00')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ss/_2h_wp7x63jb4xcfzjnw1pym0000gn/T/ipykernel_83971/4087909486.py:4: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+      "  current_date = pd.to_datetime(datetime.utcnow()).floor('H')\n"
      ]
     }
    ],
@@ -17,13 +25,13 @@
     "from datetime import datetime, timedelta, timezone\n",
     "import pandas as pd\n",
     "\n",
-    "current_date = pd.to_datetime(datetime.now(timezone.utc).replace(tzinfo=None)).floor('h')\n",
+    "current_date = pd.to_datetime(datetime.utcnow()).floor('H')\n",
     "print(f\"{current_date=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,15 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fetch_data_to=Timestamp('2025-02-04 20:00:00')\n",
-      "fetch_data_from=Timestamp('2025-01-07 20:00:00')\n"
+      "fetch_data_to=Timestamp('2025-03-28 00:00:00')\n",
+      "fetch_data_from=Timestamp('2025-02-28 00:00:00')\n"
      ]
     }
    ],
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,15 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 2024-01 was already in local storage\n",
-      "File 2024-02 was already in local storage\n"
+      "File 2024-03 was already in local storage\n",
+      "File 2024-03 was already in local storage\n"
      ]
     }
    ],
@@ -119,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 257/257 [00:00<00:00, 763.30it/s]\n"
+      "100%|██████████| 265/265 [00:00<00:00, 638.16it/s]\n"
      ]
     }
    ],
@@ -137,43 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int32')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ts_data[\"pickup_location_id\"].dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ts_data[\"pickup_location_id\"] = ts_data[\"pickup_location_id\"].astype(\"int64\")\n",
-    "ts_data[\"pickup_location_id\"].dtype"
+    "# string to datetime\n",
+    "ts_data['pickup_hour'] = pd.to_datetime(ts_data['pickup_hour'], utc=True)\n",
+    "\n",
+    "# add column with Unix epoch milliseconds\n",
+    "ts_data['pickup_ts'] = ts_data['pickup_hour'].astype(int) // 10**6"
    ]
   },
   {
@@ -185,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-02-04 15:49:22,472 INFO: Initializing external client\n",
-      "2025-02-04 15:49:22,472 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-02-04 15:49:24,386 INFO: Python Engine initialized.\n",
+      "2025-03-27 20:26:52,951 INFO: Initializing external client\n",
+      "2025-03-27 20:26:52,951 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-27 20:26:54,246 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n"
      ]
@@ -213,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_store.FeatureStore at 0x31f9eed80>"
+       "<hsfs.feature_store.FeatureStore at 0x35dc39070>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,13 +216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_group.FeatureGroup at 0x1204be3f0>"
+       "<hsfs.feature_group.FeatureGroup at 0x14e9be540>"
       ]
      },
      "execution_count": 11,
@@ -257,8 +237,8 @@
     "    name=config.FEATURE_GROUP_NAME,\n",
     "    version=config.FEATURE_GROUP_VERSION,\n",
     "    description=\"Time-series data at hourly frequency\",\n",
-    "    primary_key = ['pickup_location_id', 'pickup_hour'],\n",
-    "    event_time=\"pickup_hour\",\n",
+    "    primary_key = ['pickup_location_id', 'pickup_ts'],\n",
+    "    event_time=\"pickup_ts\",\n",
     ")\n",
     "feature_group"
    ]
@@ -292,16 +272,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 172704/172704 | Elapsed Time: 01:24 | Remaining Time: 00:00\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Launching job: time_series_hourly_feature_group_1_offline_fg_materialization\n",
-      "Job started successfully, you can follow the progress at \n",
-      "https://c.app.hopsworks.ai:443/p/1211558/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization/executions\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 171360/171360 | Elapsed Time: 00:07 | Remaining Time: 00:00\n",
+      "UserWarning: Materialization job is already running, aborting new execution.Please wait for the current execution to finish before triggering a new one.You can check the status of the current execution using `fg.materialization_job.get_state()`.or `fg.materialization_job.get_final_state()` or check it out in the Hopsworks UI.at https://c.app.hopsworks.ai:443/p/1211558/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization.\n",
+      "Use fg.materialization_job.run(args=-op offline_fg_materialization -path hdfs:///Projects/nyc_taxi_demand_forecast/Resources/jobs/time_series_hourly_feature_group_1_offline_fg_materialization/config_1738605463500) to trigger the materialization job again.\n"
      ]
     },
     {
