fix feature pipeline - datatype mismatch

--- a/notebooks/12_feature_pipeline.ipynb
+++ b/notebooks/12_feature_pipeline.ipynb
@@ -2,26 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current_date=Timestamp('2025-03-28 00:00:00')\n"
+      "current_date=Timestamp('2025-03-28 02:00:00')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ss/_2h_wp7x63jb4xcfzjnw1pym0000gn/T/ipykernel_83971/4087909486.py:4: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
+      "/var/folders/ss/_2h_wp7x63jb4xcfzjnw1pym0000gn/T/ipykernel_6840/356251437.py:4: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).\n",
       "  current_date = pd.to_datetime(datetime.utcnow()).floor('H')\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "from datetime import datetime, timedelta, timezone\n",
     "import pandas as pd\n",
     "\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fetch_data_to=Timestamp('2025-03-28 00:00:00')\n",
-      "fetch_data_from=Timestamp('2025-02-28 00:00:00')\n"
+      "fetch_data_to=Timestamp('2025-03-28 02:00:00')\n",
+      "fetch_data_from=Timestamp('2025-02-28 02:00:00')\n"
      ]
     }
    ],
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -127,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 265/265 [00:00<00:00, 638.16it/s]\n"
+      "100%|██████████| 265/265 [00:00<00:00, 805.96it/s]\n"
      ]
     }
    ],
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +158,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts_data[\"pickup_location_id\"].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts_data[\"pickup_location_id\"] = ts_data[\"pickup_location_id\"].astype(\"int64\")\n",
+    "ts_data[\"pickup_location_id\"].dtype"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,16 +207,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-27 20:26:52,951 INFO: Initializing external client\n",
-      "2025-03-27 20:26:52,951 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-27 20:26:54,246 INFO: Python Engine initialized.\n",
+      "2025-03-27 22:51:34,301 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-03-27 22:51:34,307 INFO: Initializing external client\n",
+      "2025-03-27 22:51:34,308 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-27 22:51:34,918 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1211558\n"
      ]
@@ -193,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_store.FeatureStore at 0x35dc39070>"
+       "<hsfs.feature_store.FeatureStore at 0x333a606b0>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<hsfs.feature_group.FeatureGroup at 0x14e9be540>"
+       "<hsfs.feature_group.FeatureGroup at 0x33a11d9a0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,15 +281,15 @@
     "    name=config.FEATURE_GROUP_NAME,\n",
     "    version=config.FEATURE_GROUP_VERSION,\n",
     "    description=\"Time-series data at hourly frequency\",\n",
-    "    primary_key = ['pickup_location_id', 'pickup_ts'],\n",
-    "    event_time=\"pickup_ts\",\n",
+    "    primary_key = ['pickup_location_id', 'pickup_hour'],\n",
+    "    event_time=\"pickup_hour\",\n",
     ")\n",
     "feature_group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +298,7 @@
        "'bigint'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,16 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Uploading Dataframe: 100.00% |██████████| Rows 171360/171360 | Elapsed Time: 00:07 | Remaining Time: 00:00\n",
-      "UserWarning: Materialization job is already running, aborting new execution.Please wait for the current execution to finish before triggering a new one.You can check the status of the current execution using `fg.materialization_job.get_state()`.or `fg.materialization_job.get_final_state()` or check it out in the Hopsworks UI.at https://c.app.hopsworks.ai:443/p/1211558/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization.\n",
-      "Use fg.materialization_job.run(args=-op offline_fg_materialization -path hdfs:///Projects/nyc_taxi_demand_forecast/Resources/jobs/time_series_hourly_feature_group_1_offline_fg_materialization/config_1738605463500) to trigger the materialization job again.\n"
+      "Uploading Dataframe: 100.00% |██████████| Rows 197160/197160 | Elapsed Time: 00:09 | Remaining Time: 00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching job: time_series_hourly_feature_group_1_offline_fg_materialization\n",
+      "Job started successfully, you can follow the progress at \n",
+      "https://c.app.hopsworks.ai:443/p/1211558/jobs/named/time_series_hourly_feature_group_1_offline_fg_materialization/executions\n"
      ]
     },
     {
@@ -284,7 +335,7 @@
        " None)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,8 +345,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
