extract feature and target data

--- a/notebooks/03_transform_ts_data_into_features_and_target.ipynb
+++ b/notebooks/03_transform_ts_data_into_features_and_target.ipynb
@@ -1044,7 +1044,8 @@
     "        pickup_hours = []\n",
     "        for i, idx in enumerate(indices):\n",
     "            x[i, :] = ts_data_one_location.iloc[idx[0]:idx[1]]['rides'].values\n",
-    "            y[i] = ts_data_one_location.iloc[idx[1]:idx[2]]['rides'].values.item()\n",
+    "            y[i] = ts_data_one_location.iloc[idx[1]:idx[2]]['rides'].values[0]\n",
+    "            # print(y[i])\n",
     "            pickup_hours.append(ts_data_one_location.iloc[idx[1]]['pickup_hour'])\n",
     "\n",
     "        # features: numpy array -> pandas dataframe\n",
@@ -1080,14 +1081,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/257 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 257/257 [00:00<00:00, 265.63it/s]\n"
+      "100%|██████████| 257/257 [00:00<00:00, 306.90it/s]\n"
      ]
     }
    ],
